<resources>
    <string name="app_name">HelpingHand</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Shakti Singh</string>
    <string name="nav_header_subtitle">shakti.chouhan@pratian.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_blood_group">BLOOD GROUP</string>
    <string name="text_city">CITY</string>
    <string name="search_text">SEARCH</string>
    <string-array name="blood_type">
        <item>A+</item>
        <item>O+</item>
        <item>B+</item>
        <item>AB+</item>
        <item>A-</item>
        <item>O-</item>
        <item>B-</item>
        <item>AB-</item>
    </string-array>
    <string-array name="city_dropdown">
        <item>BENGALURU</item>
        <item>JAIPUR</item>
        <item>MUMBAI</item>
        <item>KOLKATA</item>

    </string-array>

    <!--Setting strings-->
    <string name="email_address">Username</string>
    <string name="mobile_number">Phone</string>
    <string name="privacy">Privacy</string>
    <string name="terms">Terms and Conditions</string>
    <string name="email_address_text">bjoy@ahcpllc.com</string>
    <string name="phone_text">+1 (352) 585 - 3690</string>
    <string name="username">JOY BARBARA</string>

    <!--touch id-->
    <string name="enable_touchid">Enable Touch ID</string>
    <string name="switch_yes">Yes</string>
    <string name="switch_no">No</string>
    <string name="title_activity_profile">ProfileActivity</string>
</resources>
