<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/text_blood_group"
              android:layout_weight="80"
              android:textStyle="bold"
              android:textColor="@android:color/background_dark"
              android:textSize="15sp"/>
          <Spinner
              android:id="@+id/spinnerBloodType"
              android:layout_width="wrap_content"
              android:minWidth="170dp"
              android:layout_height="wrap_content"
              android:spinnerMode="dialog"
              android:background="@android:drawable/btn_dropdown"
              android:entries="@array/blood_type"
              style="@android:style/android:Widget.TextView.SpinnerItem"
              />
          
      </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_city"
                android:layout_weight="80"
                android:textStyle="bold"
                android:textColor="@android:color/background_dark"
                android:textSize="15sp"/>
            <Spinner
                android:id="@+id/spinnerBloodCity"
                android:layout_width="wrap_content"
                android:minWidth="170dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:background="@android:drawable/btn_dropdown"
                android:entries="@array/city_dropdown"
                style="@android:style/android:Widget.TextView.SpinnerItem"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/bottom_background">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_weight="80"
                android:textStyle="bold"
                android:textColor="@android:color/background_dark"
                android:textSize="15sp"/>
            <Button
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:minWidth="170dp"
                android:text="@string/search_text"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
        <ProgressBar
            android:id="@+id/requestBar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:background="@color/colorPrimary"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="gone"

            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hhframelayout"
            android:visibility="gone">

        </FrameLayout>
    </LinearLayout>
</ScrollView>